--- a/src/main/resources/static/styles.css
+++ b/src/main/resources/static/styles.css
@@ -6,7 +6,23 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/CascadeStyleSheet.css to ed
     Created on : 11 gru 2022, 00:28:23
     Author     : mmiod
 */
-header{    
+#miodi{
+    width: 100%;
+    height: 200px;
+    position: relative;
+}
+
+#menubar {
+    width: 100%;
+    height: 100px;
+    position: relative;
+}
+
+header{   
+    top: 0;
+    position: fixed;
+    height: 300px;
+    width: 100%;
   background-color: #666;
   padding: 30px;
   text-align: center;
@@ -19,5 +35,40 @@ nav {
 }
 
 footer {
+    position: fixed;
+    height: 100px;
+    width: 100%;
     background-color: grey;
+    bottom: 0;
+}
+
+li {
+ display: block;
+ transition-duration: 0.5s;
+}
+
+li:hover {
+  cursor: pointer;
+}
+
+ul li ul {
+  visibility: hidden;
+  opacity: 0;
+  position: absolute;
+  transition: all 0.5s ease;
+  margin-top: 1rem;
+  left: 0;
+  display: none;
+}
+
+ul li:hover > ul,
+ul li ul:hover {
+  visibility: visible;
+  opacity: 1;
+  display: block;
+}
+
+ul li ul li {
+  clear: both;
+  width: 100%;
 }
