--- a/src/main/resources/view/index.html
+++ b/src/main/resources/view/index.html
@@ -11,26 +11,43 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
         <link href="static/styles.css" rel="stylesheet"/>
     </head>
     <body><header>
-        <object type="image/svg+xml" data="static/miodi2.svg" class="logo">
-  miodi.com <!-- fallback image in CSS -->
-</object>
-    </header>
-    <nav></nav>
-    <section>
-        <article>
-    <h1>London</h1>
-    <p>London is the capital city of England. It is the most populous city in the  United Kingdom, with a metropolitan area of over 13 million inhabitants.</p>
-    <p>Standing on the River Thames, London has been a major settlement for two millennia, its history going back to its founding by the Romans, who named it Londinium.</p>
-  </article>
-        
-    
-    <aside>Something on the side</aside></section>
+            <div id="miodi"><!-- comment -->
+                <object type="image/svg+xml" data="static/miodi2.svg" class="logo">
+                    miodi.com <!-- fallback image in CSS -->
+                </object>
+            </div>
+            <div id="menubar">
+                <nav role="navigation">
+                    <ul>
+                        <li><a href="#">One</a></li>
+                        <li><a href="#">Two</a>
+                            <ul class="dropdown">
+                                <li><a href="#">Sub-1</a></li>
+                                <li><a href="#">Sub-2</a></li>
+                                <li><a href="#">Sub-3</a></li>
+                            </ul>
+                        </li>
+                        <li><a href="#">Three</a></li>
+                    </ul>
+                </nav>
+            </div>
+        </header>
+
+        <section>
+            <article>
+                <h1>London</h1>
+                <p>London is the capital city of England. It is the most populous city in the  United Kingdom, with a metropolitan area of over 13 million inhabitants.</p>
+                <p>Standing on the River Thames, London has been a major settlement for two millennia, its history going back to its founding by the Romans, who named it Londinium.</p>
+            </article>
+
+
+            <aside>Something on the side</aside></section>
         <div style="width: 100%">
-        <h1>Hello !</h1>
-        <p>Welcome to <span th:text="${appName}">Our App</span></p>
-        <h2>Here we building website for Maciej miodigy and mack talman and their crew szefowa lubie to CJ???</h2>
+            <h1>Hello !</h1>
+            <p>Welcome to <span th:text="${appName}">Our App</span></p>
+            <h2>Here we building website for Maciej miodigy and mack talman and their crew szefowa lubie to CJ???</h2>
         </div>
-    <footer><p>Maciej Mioduszewski Programista</p></footer>
+        <footer><p>Maciej Mioduszewski Programista</p></footer>
     </body>
 
 </html>
