--- a/src/main/resources/view/index.html
+++ b/src/main/resources/view/index.html
@@ -9,6 +9,8 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="static/styles.css" rel="stylesheet"/>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous"/>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     </head>
     <body><header>
             <div id="miodi"><!-- comment -->
@@ -19,15 +21,25 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
             <div id="menubar">
                 <nav role="navigation">
                     <ul>
-                        <li><a href="#">One</a></li>
-                        <li><a href="#">Two</a>
+                        <li><a href="#">BIO</a></li>
+                        <li><a href="#">LESSONS</a>
                             <ul class="dropdown">
-                                <li><a href="#">Sub-1</a></li>
-                                <li><a href="#">Sub-2</a></li>
-                                <li><a href="#">Sub-3</a></li>
+                                <li><a href="#">Math</a></li>
+                                <li><a href="#">Java</a></li>
+                                <li><a href="#">HTML js CSS</a></li>
+                                <li><a href="#">tutorials</a></li>
                             </ul>
                         </li>
-                        <li><a href="#">Three</a></li>
+                        <li><a href="#">Products</a>
+                        <ul class="dropdown">
+                                <li><a href="#">Google Online TV</a></li>
+                                <li><a href="#">WEBSITES</a></li>
+                                <li><a href="#">SHOPS</a></li>
+                                <li><a href="#">tutorials</a></li>
+                            </ul>
+                        </li>
+                        <li><a href="#">MEET ONLINE</a></li>
+                        <li><a href="#">CONTACT</a></li>
                     </ul>
                 </nav>
             </div>
