--- a/src/main/resources/static/styles.css
+++ b/src/main/resources/static/styles.css
@@ -18,22 +18,25 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/CascadeStyleSheet.css to ed
     position: relative;
 }
 
-header{   
+header{
     top: 0;
     position: fixed;
     height: 300px;
     width: 100%;
-  background-color: #666;
-  padding: 30px;
-  text-align: center;
-  font-size: 35px;
-  color: white;
+    background-color: #666;
+    padding: 30px;
+    text-align: center;
+    font-size: 35px;
+    color: white;
 }
 
 nav {
     background-color: red;
 }
 
+ul{
+    display:flex;
+}
 footer {
     position: fixed;
     height: 100px;
@@ -43,32 +46,50 @@ footer {
 }
 
 li {
- display: block;
- transition-duration: 0.5s;
+    padding: 10px;
+    margin-left: 25px;
+    margin-right: 25px;
+    display: block;
+    transition-duration: 0.5s;
 }
 
 li:hover {
-  cursor: pointer;
+    cursor: pointer;
 }
 
 ul li ul {
-  visibility: hidden;
-  opacity: 0;
-  position: absolute;
-  transition: all 0.5s ease;
-  margin-top: 1rem;
-  left: 0;
-  display: none;
+    visibility: hidden;
+    opacity: 0;
+    position: absolute;
+    transition: all 0.5s ease;
+    margin-top: 1rem;
+    left: 0;
+    display: none;
 }
 
 ul li:hover > ul,
 ul li ul:hover {
-  visibility: visible;
-  opacity: 1;
-  display: block;
+    visibility: visible;
+    opacity: 1;
+    display: block;
+}
+ul > li {
+    display: inline-block;
+     padding: 10px;
+    margin-left: 25px;
+    margin-right: 25px;
+    /* You can also add some margins here to make it look prettier */
+}
+ul li ul li {
+    clear: both;
+    width: 100%;
 }
 
-ul li ul li {
-  clear: both;
-  width: 100%;
+ul li:hover > ul,
+ul li:focus-within > ul,
+ul li ul:hover {
+    visibility: visible;
+    opacity: 1;
+    display: block;
+    outline: none;
 }
