--- a/src/main/resources/view/index.html
+++ b/src/main/resources/view/index.html
@@ -8,9 +8,11 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
         <title>Miodigy</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link href="static/styles.css" rel="stylesheet"/>
+
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous"/>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+        <link href="static/styles.css" rel="stylesheet"/>
+        <link href="static/menubar.css" rel="stylesheet"/>
     </head>
     <body><header>
             <div id="miodi"><!-- comment -->
@@ -22,6 +24,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
                 <nav role="navigation">
                     <ul>
                         <li><a href="#">BIO</a></li>
+                        <li><a href="#">TEAM</a></li>
                         <li><a href="#">LESSONS</a>
                             <ul class="dropdown">
                                 <li><a href="#">Math</a></li>
@@ -31,14 +34,15 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
                             </ul>
                         </li>
                         <li><a href="#">Products</a>
-                        <ul class="dropdown">
+                            <ul class="dropdown">
                                 <li><a href="#">Google Online TV</a></li>
                                 <li><a href="#">WEBSITES</a></li>
-                                <li><a href="#">SHOPS</a></li>
-                                <li><a href="#">tutorials</a></li>
+                                <li><a href="#">SHOPS</a></li>                               
                             </ul>
                         </li>
+                        <li><a href="#">MUSIC</a>
                         <li><a href="#">MEET ONLINE</a></li>
+                        <li><a href="#">charity</a></li>
                         <li><a href="#">CONTACT</a></li>
                     </ul>
                 </nav>
