frontend bio part 1

--- a/src/main/resources/view/index.html
+++ b/src/main/resources/view/index.html
@@ -15,10 +15,13 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
         <link href="static/menubar.css" rel="stylesheet"/>
     </head>
     <body><header>
+            <div id="headbar"><marquee direction="left">Hi, this website is still at their alpha stage</marquee></div>
             <div id="miodi"><!-- comment -->
-                <object type="image/svg+xml" data="static/miodi2.svg" class="logo">
-                    miodi.com <!-- fallback image in CSS -->
-                </object>
+                <div align="left">
+                    <object type="image/svg+xml" data="static/miodi2.svg" class="logo">
+                        <!--miodi.com  fallback image in CSS -->                    
+                    </object>
+                </div>
             </div>
             <div id="menubar">
                 <nav role="navigation">
