--- a/src/main/resources/static/styles.css
+++ b/src/main/resources/static/styles.css
@@ -7,15 +7,38 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/CascadeStyleSheet.css to ed
     Author     : mmiod
 */
 #miodi{
+    
     width: 100%;
-    height: 200px;
+    height: 250px;
     position: relative;
+}
+#headbar {
+    position: fixed;
+    top:0;
+    right:0;
+    
+    background-color: white;
+    z-index: 3;
+    height: 25px;
+    width: 100%;
+    margin-left: -50px;
+    color: red;
+    font-size: 10pt;
+}
+#miodi div {
+     
+    float:left;
+    max-height: 250px;
+    height: 250px;
+    
 }
 
 #menubar {
+   
     width: 100%;
     height: 100px;
     position: relative;
+    
 }
 
 header{
@@ -28,10 +51,15 @@ header{
     text-align: center;
     font-size: 35px;
     color: white;
+    border-bottom: 8px solid gold;
 }
 
 nav {
     background-color: red;
+    border-left: 8px solid gold;
+    border-top: 1px dashed gold;
+    border-bottom: 1px dashed gold;
+    border-right: 6px solid gold;
 }
 
 ul{
@@ -92,4 +120,11 @@ ul li ul:hover {
     opacity: 1;
     display: block;
     outline: none;
+}
+a:active {
+    color: white;
+}
+
+a:hover {
+    color: white;
 }
