--- a/src/main/resources/WEB-INF/views/index.html
+++ b/src/main/resources/WEB-INF/views/index.html
@@ -63,7 +63,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
             <aside>Something on the side</aside></section>
         <div style="width: 100%">
             <h1>Hello !</h1>
-            <p>Welcome to <span th:text="${appName}">Our App</span></p>
+            <!--<p>Welcome to <span th:text="${appName}">Our App</span></p>-->
             <h2>Here we building website for Maciej miodigy and mack talman and their crew szefowa lubie to CJ???</h2>
         </div>
         <footer><p>Maciej Mioduszewski Programista</p></footer>
