--- a/src/main/resources/WEB-INF/views/index.html
+++ b/src/main/resources/WEB-INF/views/index.html
@@ -11,21 +11,46 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
 
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous"/>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-        <link href="static/styles.css" rel="stylesheet"/>
-        <link href="static/menubar.css" rel="stylesheet"/>
+        <link href="/static/styles.css" th:href="@{/static/styles.css}" rel="stylesheet"/>
+        <link href="/static/menubar.css" th:href="@{/static/menubar.css}" rel="stylesheet"/>
     </head>
     <body><header>
             <div id="headbar"><marquee direction="left">Hi, this website is still at their alpha stage</marquee></div>
             <div id="miodi"><!-- comment -->
                 <div align="left">
-                    <object type="image/svg+xml" data="static/miodi2.svg" class="logo">
+                    <object type="image/svg+xml" data="/static/miodi2.svg" th:data="@{/static/miodi2.svg}" class="logo">
                         <!--miodi.com  fallback image in CSS -->                    
                     </object>
                 </div>
             </div>
             <div id="menubar">
                 <nav role="navigation">
-                    <ul>
+                    <ul class="nav flex-sm-column .visible-xs .visible-sm">
+                        <li><a href="bio.html">BIO</a></li>
+                        <li><a href="#">TEAM</a></li>
+                        <li><a href="#">LESSONS</a>
+                            <ul class="dropdown">
+                                <li><a href="#">Math</a></li>
+                                <li><a href="#">Java</a></li>
+                                <li><a href="#">HTML js CSS</a></li>
+                                <li><a href="#">tutorials</a></li>
+                            </ul>
+                        </li>
+                        <li><a href="#">Products</a>
+                            <ul class="dropdown">
+                                <li><a href="#">Google Online TV</a></li>
+                                <li><a href="#">WEBSITES</a></li>
+                                <li><a href="#">SHOPS</a></li>                               
+                            </ul>
+                        </li>
+                        <li><a href="#">MUSIC</a>
+                        <li><a href="#">MEET ONLINE</a></li>
+                        <li><a href="#">charity</a></li>
+                        <li><a href="#">CONTACT</a></li>
+                    </ul>
+                </nav>
+                <nav role="navigation">
+                    <ul class="nav .hidden-sm .hidden-xs">
                         <li><a href="bio.html">BIO</a></li>
                         <li><a href="#">TEAM</a></li>
                         <li><a href="#">LESSONS</a>
